--- a/Major_Shopping_Application/Web.config
+++ b/Major_Shopping_Application/Web.config
@@ -71,11 +71,7 @@
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
   <connectionStrings>
-    <add name="OnlineShoppingEntities" 
-		 connectionString="metadata=res://*/Shooping_Table_Models.csdl|res://*/Shooping_Table_Models.ssdl|res://*/Shooping_Table_Models.msl;
-		 provider=System.Data.SqlClient;provider connection string=&quot;
-		 data source=yaswanthkalepal\sqlexpress;initial catalog=OnlineShopping;
-		 integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;
-		 " providerName="System.Data.EntityClient" />
+    <add name="OnlineShoppingEntities" connectionString="metadata=res://*/Shooping_Table_Models.csdl|res://*/Shooping_Table_Models.ssdl|res://*/Shooping_Table_Models.msl;provider=System.Data.SqlClient;provider connection string=&quot;    data source=yaswanthkalepal\sqlexpress;initial catalog=OnlineShopping;    integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="OnlineShoppingEntities1" connectionString="metadata=res://*/OnlineShoppingModelDemo.csdl|res://*/OnlineShoppingModelDemo.ssdl|res://*/OnlineShoppingModelDemo.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=yaswanthkalepal\sqlexpress;initial catalog=OnlineShopping;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
