--- a/Major_Shopping_Application/Major_Shopping_Application.csproj
+++ b/Major_Shopping_Application/Major_Shopping_Application.csproj
@@ -52,6 +52,7 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -131,7 +132,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdminTable.cs">
-      <DependentUpon>Shooping_Table_Models.tt</DependentUpon>
+      <DependentUpon>OnlineShoppingModelDemo.tt</DependentUpon>
     </Compile>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -166,48 +167,49 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Category.cs">
-      <DependentUpon>Shooping_Table_Models.tt</DependentUpon>
+      <DependentUpon>OnlineShoppingModelDemo.tt</DependentUpon>
     </Compile>
+    <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="FeedBack.cs">
-      <DependentUpon>Shooping_Table_Models.tt</DependentUpon>
+      <DependentUpon>OnlineShoppingModelDemo.tt</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\ShoopingApplicationModel.cs" />
     <Compile Include="OnlinePayment.cs">
-      <DependentUpon>Shooping_Table_Models.tt</DependentUpon>
+      <DependentUpon>OnlineShoppingModelDemo.tt</DependentUpon>
+    </Compile>
+    <Compile Include="OnlineShoppingModelDemo.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>OnlineShoppingModelDemo.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="OnlineShoppingModelDemo.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>OnlineShoppingModelDemo.tt</DependentUpon>
+    </Compile>
+    <Compile Include="OnlineShoppingModelDemo.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>OnlineShoppingModelDemo.edmx</DependentUpon>
     </Compile>
     <Compile Include="Order.cs">
-      <DependentUpon>Shooping_Table_Models.tt</DependentUpon>
+      <DependentUpon>OnlineShoppingModelDemo.tt</DependentUpon>
     </Compile>
     <Compile Include="OrderDetail.cs">
-      <DependentUpon>Shooping_Table_Models.tt</DependentUpon>
+      <DependentUpon>OnlineShoppingModelDemo.tt</DependentUpon>
     </Compile>
     <Compile Include="ProductDetail.cs">
-      <DependentUpon>Shooping_Table_Models.tt</DependentUpon>
+      <DependentUpon>OnlineShoppingModelDemo.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Shooping_Table_Models.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Shooping_Table_Models.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Shooping_Table_Models.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Shooping_Table_Models.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Shooping_Table_Models.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Shooping_Table_Models.edmx</DependentUpon>
-    </Compile>
     <Compile Include="User.cs">
-      <DependentUpon>Shooping_Table_Models.tt</DependentUpon>
+      <DependentUpon>OnlineShoppingModelDemo.tt</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -219,6 +221,16 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="OnlineShoppingModelDemo.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>OnlineShoppingModelDemo.edmx</DependentUpon>
+      <LastGenOutput>OnlineShoppingModelDemo.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="OnlineShoppingModelDemo.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>OnlineShoppingModelDemo.edmx</DependentUpon>
+      <LastGenOutput>OnlineShoppingModelDemo.cs</LastGenOutput>
+    </Content>
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Areas\HelpPage\Views\Web.config" />
@@ -240,22 +252,19 @@
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\CollectionModelDescription.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\ApiGroup.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
+    <EntityDeploy Include="OnlineShoppingModelDemo.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>OnlineShoppingModelDemo.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="OnlineShoppingModelDemo.edmx.diagram">
+      <DependentUpon>OnlineShoppingModelDemo.edmx</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
-    <Content Include="Shooping_Table_Models.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Shooping_Table_Models.edmx</DependentUpon>
-      <LastGenOutput>Shooping_Table_Models.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="Shooping_Table_Models.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Shooping_Table_Models.edmx</DependentUpon>
-      <LastGenOutput>Shooping_Table_Models.cs</LastGenOutput>
-    </Content>
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -270,16 +279,10 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <EntityDeploy Include="Shooping_Table_Models.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>Shooping_Table_Models.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <Content Include="Shooping_Table_Models.edmx.diagram">
-      <DependentUpon>Shooping_Table_Models.edmx</DependentUpon>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Category\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
