--- a/Major_Shopping_Application/Major_Shopping_Application.csproj
+++ b/Major_Shopping_Application/Major_Shopping_Application.csproj
@@ -179,6 +179,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\CategoryModel.cs" />
     <Compile Include="Models\ShoopingApplicationModel.cs" />
     <Compile Include="OnlinePayment.cs">
       <DependentUpon>OnlineShoppingModelDemo.tt</DependentUpon>
