--- a/Major_Shopping_Application/Major_Shopping_Application.csproj
+++ b/Major_Shopping_Application/Major_Shopping_Application.csproj
@@ -175,9 +175,11 @@
     <Compile Include="Category.cs">
       <DependentUpon>OnlineShoppingModelDemo.tt</DependentUpon>
     </Compile>
+    <Compile Include="Controllers\AddToCartController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginDetailsController.cs" />
+    <Compile Include="Controllers\ProductsController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="FeedBack.cs">
@@ -186,8 +188,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\AddToCartModel.cs" />
     <Compile Include="Models\CategoryModel.cs" />
     <Compile Include="Models\LoginDetails.cs" />
+    <Compile Include="Models\ProductsModel.cs" />
     <Compile Include="Models\ShoopingApplicationModel.cs" />
     <Compile Include="OnlinePayment.cs">
       <DependentUpon>OnlineShoppingModelDemo.tt</DependentUpon>
