--- a/Major_Shopping_Application/Major_Shopping_Application.csproj
+++ b/Major_Shopping_Application/Major_Shopping_Application.csproj
@@ -179,6 +179,7 @@
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginDetailsController.cs" />
+    <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
